LIST OF CHANGES

 - npg_tracking::util::pipeline_config is refactored to restrict access
   to attributes which should not be set by the caller (local_bin, product_config)
   and to enable setting product release configuration file path via the
   new product_conf_file_path attribute

release 90.3.0
- npg_tracking::glossary::moniker -
    added a method for file name parsing to retrieve id_run,
    position, tag_index, suffix and extension;
    private attributes are prevented from being serialized under
    MooseX::Storage framework
- tracking server instrument visualization - remove visual cue
  for connection delay since ftp-ing to instruments is discontinued

release 90.2.1
 - staging area daemon to save the flowcell barcode to the
   database if it does not have this value already available 

release 90.2.0
 - reference finder for compositions not to return
   a PhiX reference when at least one other reference
   is found
 - staging area daemon will validate database flowcell barcode
   against the value in files in the run folder; in case of mismatch
   the run will not track

release 90.1.0
 - no_archive attribute for run folder API

release 90.0.0
 - cleanup and simplification of runfolder subpaths logic
 - add uses_patterned_flowcell attribute to long_info

release 89.1.0
 - Where semantic names are not possible, standard file and directory
   names are based on sha256 digest of the composition JSON
   (previously the md5 digest was used). This makes possible
   conversion from the name back to the composition using the ml
   warehouse records, which might be useful in case of clients'
   queries.
 - Unused run folder path accessors removed (reports_path,
   lane_archive_path, lane_archive_paths, lane_qc_path,
   lane_qc_paths).

release 89.0.1
 - live test patch to reflect a change in spiked PhiX tag index

release 89.0.0
 - the samplesheet driver's parser extended to cope with data from
   multiple runs