@@ -1,5 +1,8 @@
 LIST OF CHANGES
 
+ - minor change to npg_tracking::util::pipeline_config to move bqsr and
+   haplotype caller to a tertiary section which can be set by specifically
+   by reference or by using a default study config.
  - npg_tracking::util::pipeline_config is refactored to restrict access
    to attributes which should not be set by the caller (local_bin, product_config)
    and to enable setting product release configuration file path via the
